# speech_with_slide

./: .gitignore  README.md  claude.md  main.py  prompt_manager.py  prompts.yaml  pyproject.toml  test_combine.py
